--- a/client/upload.html
+++ b/client/upload.html
@@ -5,24 +5,20 @@
   <meta charset="utf-8">
   <title>Template upload</title>
 
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  
   <!-- bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
-  <!-- jquery -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-
-  <!-- formstone -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/formstone/1.3.3/js/core.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/formstone/1.3.3/js/upload.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/formstone/1.3.3/css/upload.css"></script>
-
-  <!-- bootsnip -->
-  <link href="./assets/css/upload-1.css" rel="stylesheet" type="text/css" />
+  <!-- styles -->
+  <link href="./assets/css/upload.css" rel="stylesheet" type="text/css" />
 
   <!-- vue dan axios-->
   <script src="https://unpkg.com/vue"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </head>
 
 <body>
@@ -38,22 +34,19 @@
             <div class="panel-body">
 
               <!-- Drop Zone -->
-      <form enctype="multipart/form-data" novalidate v-if="isInitial || isSaving">
-        <h1>Upload images</h1>
-        <div class="dropbox">
-          <input type="file" multiple :name="uploadFieldName" :disabled="isSaving" @change="filesChange($event.target.name, $event.target.files); fileCount = $event.target.files.length"
-            accept="image/*" class="input-file">
-          <p v-if="isInitial">
-            Drag your file(s) here to begin<br> or click to browse
-          </p>
-          <p v-if="isSaving">
-            Uploading files...
-          </p>
-        </div>
-      </form>
-              <div class="upload-drop-zone" id="drop-zone">
-                <p>Drag and drop files here or click to browse file</p>
-              </div>
+              <form enctype="multipart/form-data" novalidate v-if="isInitial || isSaving">
+                <h1>Upload images</h1>
+                <div class="dropbox">
+                  <input type="file" multiple :name="uploadFieldName" :disabled="isSaving" @change="filesChange($event.target.name, $event.target.files); fileCount = $event.target.files.length"
+                    accept="image/*" class="input-file">
+                  <p v-if="isInitial">
+                    Drag your file(s) here to begin<br> or click to browse
+                  </p>
+                  <p v-if="isSaving">
+                    Uploading files...
+                  </p>
+                </div>
+              </form>
 
             </div>
           </div>
