udah bisa lempar ke api

--- a/client/upload.html
+++ b/client/upload.html
@@ -37,7 +37,7 @@
               <form enctype="multipart/form-data" novalidate v-if="isInitial || isSaving">
                 <h1>Upload images</h1>
                 <div class="dropbox">
-                  <input type="file" multiple :name="uploadFieldName" :disabled="isSaving" @change="filesChange($event.target.name, $event.target.files); fileCount = $event.target.files.length"
+                  <input type="file" multiple :name="uploadFieldName" :disabled="isSaving" @change="filesChange($event.target.name, $event.target.files);"
                     accept="image/*" class="input-file">
                   <p v-if="isInitial">
                     Drag your file(s) here to begin<br> or click to browse
@@ -47,6 +47,28 @@
                   </p>
                 </div>
               </form>
+
+              <!--SUCCESS-->
+              <div v-if="isSuccess">
+                <h2>Uploaded {{ uploadedFiles.length }} file(s) successfully.</h2>
+                <p>
+                  <a href="javascript:void(0)" @click="reset()">Upload again</a>
+                </p>
+                <ul class="list-unstyled">
+                  <li v-for="item in uploadedFiles">
+                    <img :src="item.url" class="img-responsive img-thumbnail" :alt="item.originalName">
+                  </li>
+                </ul>
+              </div>
+              
+              <!--FAILED-->
+              <div v-if="isFailed">
+                <h2>Uploaded failed.</h2>
+                <p>
+                  <a href="javascript:void(0)" @click="reset()">Try again</a>
+                </p>
+                <pre>{{ uploadError }}</pre>
+              </div>
 
             </div>
           </div>
