--- a/client/home.html
+++ b/client/home.html
@@ -30,7 +30,11 @@
 
         <div class="col-md-12">
           <div class="panel panel-default">
-            <div class="panel-heading"><strong>Upload files</strong> <small> </small></div>
+            <div class="panel-heading">
+              <strong>Upload files</strong> <small> </small>
+              <button type="button" @click="logout()">Logout</button>
+            </div>
+
             <div class="panel-body">
 
               <!-- Drop Zone -->
